scss/partials/_add_comment.scss
div.add-comment-box-container {
  position: relative;
  width: 100%;

  @include tablet() {
    padding: 0;
    width: 100%;
    position: relative;
  }

  div.add-comment-box {
    position: relative;
    left: 0;
    right: 0;
    bottom: 0px;
    width: 100%;

    @include tablet(){
      box-shadow: none;
    }

    @include user-profile(24);

    div.user-avatar-img-container {
      position: absolute;
      top: 8px;
      left: 0;

      @include mobile() {
        display: none;
      }
    }

    @include mobile() {
      background-color: white;
      border: 1px solid $mid_light_grey;
      border-radius: 4px;
      padding: 9px 14px;
    }

    div.add-comment-internal{
      position: absolute;
      bottom: 0;
      left: 40px;
      width: calc(100% - 24px - 16px);
      position: relative;
      max-height: 200px;
      border-radius: 4px;
      border: 1px solid $mid_light_grey;
      overflow-x: hidden;
      overflow-y: auto;

      @include mobile() {
        width: 100%;
        left: unset;
        position: relative;
        bottom: unset;
        max-height: unset;
        border: none;
      }

      div.add-comment {
        resize: none;
        outline: none;
        cursor: auto;
        white-space: pre-wrap;
        word-wrap: break-word;
        margin: 0;
        padding: 9px 14px;
        background-color: white;
        height: auto;
        min-height: 38px;
        outline: none;
        box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.07);

        @include mobile() {
          padding: 0;
          border: none;
          border-radius: 0;
          box-shadow: none;
          min-height: unset;
        }

        &.medium-editor-placeholder:after, &.medium-editor-placeholder-relative:after {
          @include OC_Body_Book();
          font-size: 16px;
          color: rgba($deep_navy, 0.5);
          font-style: normal;
        }

        @include tablet() {
          width: calc(100% - 48px);
          resize: vertical;
          padding-right: 0px;
        }

        .emojione {
          @include emoji-size(13);
        }

        @include activity-comment();
      }

      // div.emoji-picker {
      //   position: absolute;
      //   top: unset;
      //   bottom: 0px;
      //   right: 0px;
      //   display: none;

      //   div.picker-container {
      //     left: unset;
      //     right: -5px;
      //     top: 24px;
      //   }

      //   @include tablet() {
      //     display: none;
      //   }
      // }
    }
  }

  div.add-comment-footer {
    margin-top: 12px;
    height: 24px;
    position: relative;

    button.send-btn {
      float: right;
      height: 24px;
      padding: 0;
      margin: 0;
      text-align: right;
      color: $carrot_green;
      @include OC_Body_Bold();
      font-size: 16px;
      padding: 0 0 0 8px;

      @include mobile() {
        right: 10px;
        width: 40px;
      }

      &:disabled {
        cursor: not-allowed;
        opacity: 1 !important;

        @include mobile() {
          color: rgba($light_navy, 0.5);
        }

        @include big_web() {
          &:hover {
            opacity: 1;
          }
        }
      }
    }

    div.buttons-separator {
      width: 1px;
      height: 16px;
      float: right;
      background-color: $ultra_light_grey;
      margin: 4px 8px 0;
    }

    button.complete-follow-up {
      float: right;
      height: 24px;
      @include OC_Body_Book();
      font-size: 14px;
      line-height: 24px;
      color: $deep_navy;
      padding: 0 8px 0 24px;
      position: relative;

      div.carrot-checkbox {
        position: absolute;
        top: 4px;
        left: 0px;
      }

      &.unselected {
        opacity: 0.5;

        &:hover {
          opacity: 1;
        }
      }

      &:disabled {
        cursor: not-allowed;
        opacity: 1 !important;

        @include mobile() {
          opacity: 0.5;
        }

        @include big_web() {
          &:hover {
            opacity: 1;
          }
        }
      }
    }
  }
}

